// === SE104 VLEAGUE — Match Operations ===
// Generated from apps/api/prisma/schema.prisma by scripts/generate_report_erd.py
// 12 tables · PostgreSQL · snake_case naming

Enum TeamStatus {
  ACTIVE
  INACTIVE
}

Enum PlayerPosition {
  GK
  DF
  MF
  FW
}

Enum PlayerType {
  DOMESTIC
  FOREIGN
}

Enum MatchStatus {
  DRAFT
  PUBLISHED
  LOCKED
  FINISHED
  POSTPONED
}

Enum MatchScoreSource {
  ADMIN
  REFEREE
}

Enum SeasonStatus {
  UPCOMING
  IN_PROGRESS
  COMPLETED
}

Enum EventType {
  GOAL
  OWN_GOAL
  YELLOW_CARD
  RED_CARD
  SUBSTITUTION
  PENALTY
  PENALTY_MISS
}

Enum MatchKitType {
  PRIMARY
  BACKUP
}

Enum MatchLineupRole {
  STARTER
  SUBSTITUTE
}

Enum MatchLineupStatus {
  SUBMITTED
  APPROVED
  REJECTED
}

Enum PlayerSuspensionStatus {
  ACTIVE
  SERVED
  CANCELLED
}

Enum OfficialStatus {
  ACTIVE
  INACTIVE
}

Enum MatchOfficialRole {
  MAIN_REFEREE
  ASSISTANT_REFEREE
  FOURTH_OFFICIAL
  SUPERVISOR
}

// 1) teams
Table teams {
  id         uuid [pk, not null, default: `gen_random_uuid()`]
  name       varchar [unique, not null]
  short_name varchar
  city       varchar
  logo_url   varchar
  coach_name varchar
  status     TeamStatus [not null, default: 'ACTIVE']
  stadium_id uuid
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null]
}

// 2) players
Table players {
  id             uuid [pk, not null, default: `gen_random_uuid()`]
  full_name      varchar [not null]
  dob            timestamp [not null]
  nationality    varchar [not null]
  position       PlayerPosition [not null]
  birth_place    varchar
  height_cm      int
  weight_kg      int
  player_type    PlayerType [not null, default: 'DOMESTIC']
  career_summary text
  created_at     timestamp [not null, default: `now()`]
  updated_at     timestamp [not null]

  indexes {
    full_name
    nationality
    position
    player_type
  }
}

// 3) seasons
Table seasons {
  id         uuid [pk, not null, default: `gen_random_uuid()`]
  name       varchar [unique, not null]
  year       int [not null]
  status     SeasonStatus [not null, default: 'UPCOMING']
  start_date timestamp
  end_date   timestamp
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null]
}

// 4) matches
Table matches {
  id           uuid [pk, not null, default: `gen_random_uuid()`]
  round_no     int [not null]
  leg          int [not null, default: 1]
  season_id    uuid [ref: > seasons.id]
  home_team_id uuid [not null, ref: > teams.id]
  away_team_id uuid [not null, ref: > teams.id]
  stadium_id   uuid
  kickoff_at   timestamp
  home_score   int
  away_score   int
  score_source MatchScoreSource
  status       MatchStatus [not null, default: 'DRAFT']
  created_at   timestamp [not null, default: `now()`]
  updated_at   timestamp [not null]

  indexes {
    round_no
    status
    kickoff_at
    home_team_id
    away_team_id
    season_id
    (season_id, round_no)
  }
}

// 5) match_events
Table match_events {
  id                uuid [pk, not null, default: `gen_random_uuid()`]
  match_id          uuid [not null, ref: > matches.id]
  minute            int [not null]
  type              EventType [not null]
  goal_type         varchar
  player_id         uuid [ref: > players.id]
  related_player_id uuid [ref: > players.id]
  team_id           uuid [ref: > teams.id]
  note              varchar
  source            varchar [not null, default: 'MANUAL']
  created_at        timestamp [not null, default: `now()`]
  updated_at        timestamp [not null]

  indexes {
    match_id
    player_id
    team_id
    type
    (match_id, source)
  }
}

// 6) match_team_registrations
Table match_team_registrations {
  id           uuid [pk, not null, default: `gen_random_uuid()`]
  match_id     uuid [not null, ref: > matches.id]
  team_id      uuid [not null, ref: > teams.id]
  kit_type     MatchKitType [not null, default: 'PRIMARY']
  formation    varchar [not null]
  status       MatchLineupStatus [not null, default: 'SUBMITTED']
  submitted_at timestamp [not null, default: `now()`]
  reviewed_at  timestamp
  review_note  varchar
  created_at   timestamp [not null, default: `now()`]
  updated_at   timestamp [not null]

  indexes {
    (match_id, team_id) [unique]
    match_id
    team_id
    status
  }
}

// 7) match_lineup_players
Table match_lineup_players {
  id              uuid [pk, not null, default: `gen_random_uuid()`]
  registration_id uuid [not null, ref: > match_team_registrations.id]
  player_id       uuid [not null, ref: > players.id]
  role            MatchLineupRole [not null]
  position        PlayerPosition
  shirt_number    int
  created_at      timestamp [not null, default: `now()`]

  indexes {
    (registration_id, player_id) [unique]
    player_id
    role
  }
}

// 8) player_suspensions
Table player_suspensions {
  id                 uuid [pk, not null, default: `gen_random_uuid()`]
  player_id          uuid [not null, ref: > players.id]
  team_id            uuid [not null, ref: > teams.id]
  season_id          uuid [not null, ref: > seasons.id]
  source_match_id    uuid [not null, ref: > matches.id]
  effective_match_id uuid [not null, ref: > matches.id]
  reason             varchar [not null]
  status             PlayerSuspensionStatus [not null, default: 'ACTIVE']
  served_at          timestamp
  created_at         timestamp [not null, default: `now()`]
  updated_at         timestamp [not null]

  indexes {
    (player_id, source_match_id, effective_match_id, reason) [unique]
    team_id
    season_id
    effective_match_id
    status
  }
}

// 9) officials
Table officials {
  id         uuid [pk, not null, default: `gen_random_uuid()`]
  full_name  varchar [not null]
  email      varchar
  phone      varchar
  status     OfficialStatus [not null, default: 'ACTIVE']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null]

  indexes {
    status
  }
}

// 10) match_official_assignments
Table match_official_assignments {
  id           uuid [pk, not null, default: `gen_random_uuid()`]
  match_id     uuid [not null, ref: > matches.id]
  official_id  uuid [not null, ref: > officials.id]
  role         MatchOfficialRole [not null]
  published_at timestamp [not null, default: `now()`]
  note         varchar
  created_at   timestamp [not null, default: `now()`]
  updated_at   timestamp [not null]

  indexes {
    (match_id, official_id, role) [unique]
    match_id
    official_id
    role
  }
}

// 11) match_reports
Table match_reports {
  id                   uuid [pk, not null, default: `gen_random_uuid()`]
  match_id             uuid [unique, not null, ref: > matches.id]
  submitted_by_user_id uuid
  home_score           int [not null]
  away_score           int [not null]
  best_player_id       uuid [ref: > players.id]
  technical_stats      json
  note                 text
  submitted_at         timestamp [not null, default: `now()`]
  created_at           timestamp [not null, default: `now()`]
  updated_at           timestamp [not null]

  indexes {
    best_player_id
    submitted_by_user_id
  }
}

// 12) discipline_reports
Table discipline_reports {
  id                      uuid [pk, not null, default: `gen_random_uuid()`]
  match_id                uuid [unique, not null, ref: > matches.id]
  supervisor_id           uuid [not null, ref: > officials.id]
  organization_rating     varchar [not null]
  referee_issues          text
  player_issues           text
  organizer_issues        text
  notes                   text
  sent_to_disciplinary_at timestamp
  submitted_at            timestamp [not null, default: `now()`]
  created_at              timestamp [not null, default: `now()`]
  updated_at              timestamp [not null]

  indexes {
    supervisor_id
  }
}
